--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,20 @@ body {
   /*height: 300px;  Should be removed. Only for demonstration */
 }
 
+.columnG {
+  float: left;
+  width: 10%;
+  padding: 10px;
+  /*height: 300px;  Should be removed. Only for demonstration */
+}
+
+.columnB {
+  float: left;
+  width: 80%;
+  padding: 10px;
+  /*height: 300px;  Should be removed. Only for demonstration */
+}
+
 /* Clear floats after the columns */
 .row:after {
   content: "";
@@ -136,4 +150,34 @@ li a:hover, .dropdown:hover .dropbtn {
 
 .iconMenu {
   text-align: center;
+}
+
+input[type=text], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+}
+
+input[type=submit] {
+  background-color: #04AA6D;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+
+.container {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
 }
